Simple bug reproducer

--- a/getting-started/src/main/resources/application.properties
+++ b/getting-started/src/main/resources/application.properties
@@ -1,2 +1,7 @@
 # Quarkus Configuration file
 # key = value
+
+
+# INFO file logging
+quarkus.log.file.enable=true
+quarkus.log.file.path=target/test.log
